src/objects/Offers_sent__x.object
<CustomObject>
    <description>Offers_sent</description>
    <externalDataSource>CustomApexHerokuConnector</externalDataSource>
    <externalName>caesars$offers_sent</externalName>
    <fields>
        <fullName>c_offer_id__c</fullName>
        <description>c_offer_id</description>
        <externalDeveloperName>c_offer_id</externalDeveloperName>
        <label>Offer id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_offer_status__c</fullName>
        <description>c_offer_status</description>
        <externalDeveloperName>c_offer_status</externalDeveloperName>
        <label>Offer status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_purge_flag__c</fullName>
        <description>c_purge_flag</description>
        <externalDeveloperName>c_purge_flag</externalDeveloperName>
        <label>Purge flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_quality_cd__c</fullName>
        <description>c_quality_cd</description>
        <externalDeveloperName>c_quality_cd</externalDeveloperName>
        <label>Quality code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_recp_grp_id__c</fullName>
        <description>c_recp_grp_id</description>
        <externalDeveloperName>c_recp_grp_id</externalDeveloperName>
        <label>Recp group id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contact__c</fullName>
        <externalDeveloperName>contact</externalDeveloperName>
        <label>Contact</label>
        <length>15</length>
        <referenceTargetField>Contact.ContactId__c</referenceTargetField>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Offers sent</relationshipLabel>
        <relationshipName>Offers_sent</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>d_offer_status_dt__c</fullName>
        <description>d_offer_status_dt</description>
        <externalDeveloperName>d_offer_status_dt</externalDeveloperName>
        <label>Offer ststus date</label>
        <type>Text</type>
        <length>40</length>
    </fields>
    <fields>
        <fullName>d_purge_date__c</fullName>
        <description>d_purge_date</description>
        <externalDeveloperName>d_purge_date</externalDeveloperName>
        <label>Purge date</label>
        <type>Text</type>
        <length>40</length>
    </fields>
    <fields>
        <fullName>d_rpt_period__c</fullName>
        <description>d_rpt_period</description>
        <externalDeveloperName>d_rpt_period</externalDeveloperName>
        <label>Rpt period</label>
        <type>Text</type>
        <length>40</length>
    </fields>
    <fields>
        <fullName>d_send_date__c</fullName>
        <description>d_send_date</description>
        <externalDeveloperName>d_send_date</externalDeveloperName>
        <label>Send date</label>
        <type>Text</type>
        <length>40</length>
    </fields>
    <fields>
        <fullName>d_timestamp__c</fullName>
        <description>d_timestamp</description>
        <externalDeveloperName>d_timestamp</externalDeveloperName>
        <label>Timestamp</label>
        <type>Text</type>
        <length>40</length>
    </fields>
    <fields>
        <fullName>i_dmid__c</fullName>
        <description>i_dmid</description>
        <externalDeveloperName>i_dmid</externalDeveloperName>
        <label>winnetId</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i_gst_offer_nbr__c</fullName>
        <description>i_gst_offer_nbr</description>
        <externalDeveloperName>i_gst_offer_nbr</externalDeveloperName>
        <label>Offer number</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i_mail_id__c</fullName>
        <description>i_mail_id</description>
        <externalDeveloperName>i_mail_id</externalDeveloperName>
        <label>Mail id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_nbr_coup_redeem__c</fullName>
        <description>i_nbr_coup_redeem</description>
        <externalDeveloperName>i_nbr_coup_redeem</externalDeveloperName>
        <label>Number coupons redeemed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_offer_counter__c</fullName>
        <description>i_offer_counter</description>
        <externalDeveloperName>i_offer_counter</externalDeveloperName>
        <label>Offer counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_paradb_list_id__c</fullName>
        <description>i_paradb_list_id</description>
        <externalDeveloperName>i_paradb_list_id</externalDeveloperName>
        <label>Paradb list id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_prospect_id__c</fullName>
        <description>i_prospect_id</description>
        <externalDeveloperName>i_prospect_id</externalDeveloperName>
        <label>Prospect id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Offer sent</label>
    <pluralLabel>Offers sent</pluralLabel>
</CustomObject>